# omninet-v4

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  agents.json  conzetian_math.py  demo_sovereign_ai.py  omninet_daemon.py  pyproject.toml  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci-cd.yml  ci.yml  python-ci.yml  tests.yml
docs/: AI_INTEGRATION.md  API_REFERENCE.md  ARCHITECTURE.md  AUDIT_FINDINGS_2026.md  INTEGRATION_MANIFEST.md  REPOSITORY_AUDIT.md  SOVEREIGN_AUDIT_REPORT.md
docs/sovereign/: Sovereign_Proclamation_Justin_Neal_Thomas_Conzet.docx
omninet/: __init__.py  ai_gateway.py  ai_gateway.ts  autonomous_upgrade.py  cli.py  daemon.py  echoflux.py  infinite_mathematics.py  jolt.py  knowledge_graph.py  math.py  security.py  sovereign_decree.py  sovereign_engine.py  sovereign_sdk.ts  spider_driver.py  swarm_activation.py  zygros_ultimate.py
papers/: README.md
papers/infinite_mathematics/: main.tex
tests/: test_echoflux.py  test_jolt.py  test_knowledge_graph.py  test_math.py  test_security.py  test_sovereign_engine.py  test_spider_driver.py
