[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omninet-v4"
version = "4.0.0"
description = "The Conzetian Sovereign Internet — κ-Coherence Routing for 1.08 Quadrillion Agents"
readme = "README.md"
license = {text = "Sovereign Authorship License v1.0"}
authors = [
    {name = "Justin Neal Thomas Conzet", email = "sovereign@conzetian.system"}
]
maintainers = [
    {name = "Justin Neal Thomas Conzet"}
]
keywords = [
    "networking",
    "mesh-network",
    "p2p",
    "distributed-systems",
    "ai",
    "multi-agent",
    "kappa-coherence",
    "sovereign",
    "decentralized"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: System :: Networking",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
]
docs = [
    "sphinx>=5.0.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=1.0.0",
]
all = [
    "omninet-v4[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/Zygros/omninet-v4"
Documentation = "https://github.com/Zygros/omninet-v4#readme"
Repository = "https://github.com/Zygros/omninet-v4.git"
Issues = "https://github.com/Zygros/omninet-v4/issues"
Changelog = "https://github.com/Zygros/omninet-v4/releases"

[project.scripts]
omninet = "omninet.daemon:main"
omninet-verify = "omninet.math:verify_mathematics"

[tool.setuptools.packages.find]
where = ["."]
include = ["omninet*"]

[tool.setuptools.package-data]
omninet = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py38", "py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["omninet"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=omninet --cov-report=term-missing"

[tool.coverage.run]
source = ["omninet"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
