[tool.poetry]
name = "omninet-v4"
version = "0.1.0"
description = ""
authors = ["Zygros <example@example.com>"]

[tool.poetry.dependencies]
requests = "^2.26.0"
numpy = "^1.21.0"
aiohttp = "^3.8.1"
asyncio = "^3.4.3"
pandas = "^1.3.5"
cryptography = "^35.0.0"
pycryptodome = "^3.14.0"
python-dotenv = "^0.19.0"
pyyaml = "^6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"